k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend
    namespace: plant-tracker
spec:
    replicas: 1
    selector:
        matchLabels:
            app: backend
    template:
        metadata:
            labels:
                app: backend
        spec:
            containers:
                - name: plant-tracker-backend
                  image: philippderroole/plant-tracker-api:latest
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 8000
