k8s/database-service.yml
apiVersion: v1
kind: Service
metadata:
    name: database-service
    namespace: plant-tracker
spec:
    selector:
        app: postgres
    ports:
        - name: postgres
          port: 5432
